exports[`Switch with listeners matches snapshot 1`] = `
<div
  className="switch">
  <label>
    Off
    <input
      checked={false}
      className="validate anotherClass"
      disabled={false}
      id="test"
      name="test_input"
      onBlur={[Function blurCallback]}
      onChange={[Function bound _onChange]}
      onClick={[Function bound _onChange]}
      onFocus={[Function focusCallback]}
      onMouseEnter={[Function bound _onMouseEnter]}
      onMouseLeave={[Function bound _onMouseLeave]}
      placeholder=""
      required={true}
      type="checkbox"
      value="" />
    <span
      className="lever" />
    On
  </label>
</div>
`;

exports[`Switch with value matches snapshot 1`] = `
<div
  className="switch">
  <label>
    Off
    <input
      checked={false}
      className=""
      disabled={false}
      id="test"
      name="test_input"
      onBlur={[Function blurCallback]}
      onChange={[Function bound _onChange]}
      onClick={[Function bound _onChange]}
      onFocus={[Function focusCallback]}
      onMouseEnter={[Function bound _onMouseEnter]}
      onMouseLeave={[Function bound _onMouseLeave]}
      placeholder=""
      required={false}
      type="checkbox"
      value="value" />
    <span
      className="lever" />
    On
  </label>
</div>
`;

exports[`Switch without listeners matches snapshot 1`] = `
<div
  className="switch">
  <label>
    Off
    <input
      checked={true}
      className=""
      disabled={false}
      id="test"
      name="test_input"
      onBlur={[Function blurCallback]}
      onChange={[Function bound _onChange]}
      onClick={[Function bound _onChange]}
      onFocus={[Function focusCallback]}
      onMouseEnter={[Function bound _onMouseEnter]}
      onMouseLeave={[Function bound _onMouseLeave]}
      placeholder=""
      required={true}
      type="checkbox"
      value="" />
    <span
      className="lever" />
    On
  </label>
</div>
`;
